--- a/Modules/Viper.xctemplate/UIKit/___FILEBASENAME___ViewController.storyboard
+++ b/Modules/Viper.xctemplate/UIKit/___FILEBASENAME___ViewController.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--___FILEBASENAME___-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="___FILEBASENAME___ViewController" id="Y6W-OH-hqX" customClass="___FILEBASENAME___ViewController" customModule="WanderLens" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="___FILEBASENAME___" id="Y6W-OH-hqX" customClass="___FILEBASENAME___" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
